--- a/public/aviso_privacidad.html
+++ b/public/aviso_privacidad.html
@@ -12,7 +12,7 @@
     <header class="relative inset-x-0 top-0 z-50">
       <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
         <div class="flex lg:flex-1 items-center">
-          <a href="./home.html" class="-m-1.5 p-1.5">
+          <a href="./index.html" class="-m-1.5 p-1.5">
             <img class=" h-12 w-12" src="/Image/ecolearn.png" alt="">
           </a>
           <h1 class="ml-2m font-sans">EcoLearn</h1>
@@ -26,7 +26,7 @@
           </button>
         </div>
         <div class="hidden lg:flex lg:gap-x-12">
-          <a href="./home.html" class="text-sm font-sans leading-6 text-gray-900">HOME</a>
+          <a href="./index.html" class="text-sm font-sans leading-6 text-gray-900">HOME</a>
           <a href="./contacto.html" class="text-sm font-sans leading-6 text-gray-900">CONTACTO</a>
           <a href="./descubre.html" class="text-sm font-sans leading-6 text-gray-900">DESCUBRE</a>
         </div>
@@ -55,7 +55,7 @@
           <div class="mt-6 flow-root">
             <div class="-my-6 divide-y divide-gray-500/10">
               <div class="space-y-2 py-6">
-                <a href="./home.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">HOME</a>
+                <a href="./index.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">HOME</a>
                 <a href="./contacto.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">CONTACTO</a>
                 <a href="./descubre.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">DESCUBRE</a>
               </div>
