--- a/public/compostaje.html
+++ b/public/compostaje.html
@@ -15,7 +15,7 @@
           aria-label="Global"
         >
           <div class="flex lg:flex-1 items-center">
-            <a href="./home.html" class="-m-1.5 p-1.5">
+            <a href="./index.html" class="-m-1.5 p-1.5">
               <img class="h-12 w-12" src="/Image/ecolearn.png" alt="" />
             </a>
             <h1 class="ml-2m font-sans">EcoLearn</h1>
@@ -45,7 +45,7 @@
           </div>
           <div class="hidden lg:flex lg:gap-x-12">
             <a
-              href="./home.html"
+              href="./index.html"
               class="text-sm font-sans leading-6 text-gray-900"
               >HOME</a
             >
@@ -118,7 +118,7 @@
               <div class="-my-6 divide-y divide-gray-500/10">
                 <div class="space-y-2 py-6">
                   <a
-                    href="./separar-basura.html"
+                    href="./index.html"
                     class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
                     >HOME</a
                   >
