--- a/public/donar.html
+++ b/public/donar.html
@@ -12,7 +12,7 @@
     <header class="relative inset-x-0 top-0 z-50">
       <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
         <div class="flex lg:flex-1 items-center">
-          <a href="./home.html" class="-m-1.5 p-1.5">
+          <a href="./index.html" class="-m-1.5 p-1.5">
             <img class="h-12 w-12" src="/Image/ecolearn.png" alt="EcoLearn">
           </a>
           <h1 class="ml-2m font-sans">EcoLearn</h1>
@@ -26,7 +26,7 @@
           </button>
         </div>
         <div class="hidden lg:flex lg:gap-x-12">
-          <a href="./home.html" class="text-sm font-sans leading-6 text-gray-900">HOME</a>
+          <a href="./index.html" class="text-sm font-sans leading-6 text-gray-900">HOME</a>
           <a href="./contacto.html" class="text-sm font-sans leading-6 text-gray-900">CONTACTO</a>
           <a href="./descubre.html" class="text-sm font-sans leading-6 text-black">DESCUBRE</a>
         </div>
