--- a/public/form.html
+++ b/public/form.html
@@ -170,7 +170,7 @@
             Enviar
           </button>
           <a
-            href="./home.html"
+            href="./index.html"
             class="inline-block align-baseline font-bold text-sm text-green-500 hover:text-green-800"
           >
             Regresar a la página de inicio
