--- a/public/modalCancel.html
+++ b/public/modalCancel.html
@@ -15,7 +15,7 @@
     <div class="bg-white rounded-lg p-8 shadow-lg w-96">
       <h2 class="text-2xl font-bold text-red-600 mb-4">¡Error en el Pago!</h2>
       <p class="text-gray-700 mb-6">Se ha producido un error al procesar tu pago. Por favor, inténtalo de nuevo.</p>
-      <a href="../public/home.html"><button class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 focus:outline-none">Aceptar</button></a>
+      <a href="../public/index.html"><button class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 focus:outline-none">Aceptar</button></a>
     </div>
   </div>
 
