--- a/public/modalSuccess.html
+++ b/public/modalSuccess.html
@@ -15,7 +15,7 @@
     <div class="bg-white rounded-lg p-8 shadow-lg w-96">
       <h2 class="text-2xl font-bold text-green-600 mb-4">¡Pago Exitoso!</h2>
       <p class="text-gray-700 mb-6">Tu pago se ha realizado correctamente. Gracias por tu compra.</p>
-      <a href="../public/home.html"><button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 focus:outline-none">Aceptar</button></a>
+      <a href="../public/indx.html"><button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 focus:outline-none">Aceptar</button></a>
     </div>
   </div>
 
