--- a/public/separar_basura.html
+++ b/public/separar_basura.html
@@ -15,7 +15,7 @@
           aria-label="Global"
         >
           <div class="flex lg:flex-1 items-center">
-            <a href="./home.html" class="-m-1.5 p-1.5">
+            <a href="./index.html" class="-m-1.5 p-1.5">
               <img class="h-12 w-12" src="/Image/ecolearn.png" alt="" />
             </a>
             <h1 class="ml-2m font-sans">EcoLearn</h1>
@@ -45,7 +45,7 @@
           </div>
           <div class="hidden lg:flex lg:gap-x-12">
             <a
-              href="./home.html"
+              href="./index.html"
               class="text-sm font-sans leading-6 text-gray-900"
               >HOME</a
             >
