--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
         <div class="flex lg:flex-1 items-center">
           <a href="./index.html" class="-m-1.5 p-1.5">
-            <img class=" h-12 w-12" src="/image/ecolearn.png" alt="">
+            <img class=" h-12 w-12" src="./image/ecolearn.png" alt="">
           </a>
           <h1 class="ml-2m font-sans">EcoLearn</h1>
         </div>
